[gd_scene load_steps=11 format=3 uid="uid://7wl1lrith1tu"]

[ext_resource type="Script" path="res://Scripts/character.gd" id="1_frv54"]
[ext_resource type="PackedScene" uid="uid://skfsav6gs3ev" path="res://Scenes/VFX1.tscn" id="2_dowmu"]
[ext_resource type="Material" uid="uid://muj32bhsg267" path="res://Materials/bubble.tres" id="2_nj37i"]
[ext_resource type="PackedScene" uid="uid://b1o32axsqc5oa" path="res://Scenes/VFXSalto.tscn" id="3_a8f3d"]
[ext_resource type="PackedScene" uid="uid://cvykag5pcp5p2" path="res://Meshes/Prefabs/EscenaCharGeneradaDeFBX.tscn" id="3_dsa1f"]
[ext_resource type="PackedScene" uid="uid://8m8bl4ajb3vj" path="res://Scenes/VFXPop.tscn" id="4_gv3oq"]
[ext_resource type="PackedScene" uid="uid://b7our52x0rdaj" path="res://Scenes/VFXSoap.tscn" id="7_jee1n"]

[sub_resource type="BoxShape3D" id="BoxShape3D_y6n54"]
size = Vector3(0.616638, 1.48453, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_utaet"]

[sub_resource type="SphereMesh" id="SphereMesh_7vhgi"]

[node name="MainCharacter" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00292277, 1.19209e-07, -0.00447547)
script = ExtResource("1_frv54")
vfx1 = ExtResource("2_dowmu")
vfxSalto = ExtResource("3_a8f3d")
vfxPop = ExtResource("4_gv3oq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0714417, -0.0345739, 0)
shape = SubResource("BoxShape3D_y6n54")

[node name="Bubble" type="Area3D" parent="." groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0102339, 0.939915, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bubble"]
shape = SubResource("SphereShape3D_utaet")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Bubble"]
mesh = SubResource("SphereMesh_7vhgi")
surface_material_override/0 = ExtResource("2_nj37i")

[node name="CharacterBase" parent="." instance=ExtResource("3_dsa1f")]
transform = Transform3D(-1.74846e-08, 0, 0.4, 0, 0.4, 0, -0.4, 0, -1.74846e-08, 0, -0.814742, 0)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Soap" parent="." instance=ExtResource("7_jee1n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.241566, 0.837661, 0)

[connection signal="area_shape_entered" from="Bubble" to="." method="_on_bubble_area_shape_entered"]
[connection signal="body_entered" from="Bubble" to="." method="_on_bubble_body_entered"]
